# etl-completa-

./: README.md  pyproject.toml  script_bronze.ipynb  teste.py
utils/: extract_api.py  utils.py
